Thu Jul  5 11:40:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2503_Regression/test_i.cpp:
        * tests/Bug_2560_Regression/Stock_Factory_i.cpp:
        * tests/Bug_2560_Regression/Stock_i.cpp:
          Removed exception specification

Thu Jul  5 11:31:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/AdvSlot/server.cpp:
        * tests/Portable_Interceptors/AdvSlotDblCpy/server.cpp:
        * tests/Portable_Interceptors/AdvSlotExt/server.cpp:
        * tests/Portable_Interceptors/Slot/driver.cpp:
          Removed exception specification

        * tests/POA/EndpointPolicy/run_test.pl:
          Remove another ior file

Thu Jul  5 11:26:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          Removed not used static resource variable

        * tao/params.cpp:
          Fixed variable initialization order

Thu Jul  5 08:01:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
        * tao/ORB_Core.h:
        * tao/params.cpp:
        * tao/params.h:
          Moved several ORB configuration settins out of the static resources
          into the ORB params. With the introduction of the service gestalt
          the static resources where handled to have an instance for each ORB
          which leads to problems with RTCORBA. Now explicitly changed these
          settings to have a value for each ORB, this makes it also possible
          to mix RT and non RT ORBs/POAs in one process, but using the ORB
          Initializer we can make sure all RTORBs get the correct value.
          This fixes bugzilla 2953.

        * MPC/config/strategies.mpb:
          Strategies library needs PI

        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientORBInitializer.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientService_Activate.cpp:
          Changed to set the endpoint selector factory name on each ORB