@@ -147,8 +147,7 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
       ACE_DEBUG ((LM_DEBUG, "event loop finished\n"));
 
       root_poa->destroy (1,  // ethernalize objects
-                         0  // wait for completion
-                         );
+                         0); // wait for completion
 
       orb->destroy ();
     }
